# scatter-gather

./: AUTHORS  Makefile.am  README.md  configure.ac
src/: Makefile  Makefile.am  scatgat.c  scatgat.h
